--- a/DINOv_example/dockerfile
+++ b/DINOv_example/dockerfile
@@ -1,22 +1,25 @@
-# FROM nvidia/cuda:11.3.1-cudnn8-runtime-ubuntu20.04
 FROM pytorch/pytorch:1.13.1-cuda11.6-cudnn8-runtime
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    # python3-pip \
     git \
     curl \
     vim \
     wget \
-    ninja-build \
     gcc-8 \
     g++-8 \
+    ninja-build \
+    build-essential \
+    python3-dev \
+    python3-setuptools \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
 ENV CC=gcc-8
 ENV CXX=g++-8
 
-# 必要なPythonパッケージをインストール（PyTorch + Torchvision）
-# RUN pip3 install torch==1.13.1 torchvision==0.14.1 --extra-index-url https://download.pytorch.org/whl/cu113
+# GitHubから特定のバージョン（例: タグ v2.0.4）をインストール
+RUN pip3 install 'git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI'
 
 # Detectron2のカスタムバージョンをインストール
 RUN git clone https://github.com/MaureenZOU/detectron2-xyz.git /workspace/detectron2-xyz
@@ -30,8 +33,17 @@ RUN pip3 install .
 
 # DINOvのリポジトリをクローン
 RUN git clone https://github.com/UX-Decoder/DINOv /workspace/DINOv
-
-# DINOvディレクトリに移動し、依存関係をインストール
 WORKDIR /workspace/DINOv
+
+# モデルチェックポイント（model_swinT.pth）をダウンロード
+RUN wget https://github.com/UX-Decoder/DINOv/releases/download/checkpoint/model_swinT.pth -P /workspace/DINOv
+RUN wget https://github.com/UX-Decoder/DINOv/releases/download/checkpoint/model_swinL.pth -P /workspace/DINOv
+
+# requirements.txtからpycocotoolsを除いた残りの依存関係をインストール
+RUN sed -i '/pycocotools/d' requirements.txt
+RUN sed -i '/torch/d' requirements.txt
+RUN sed -i '/torchvision/d' requirements.txt
+
 RUN pip3 install -r requirements.txt
+RUN pip3 install markupsafe==2.0.1
 
