--- a/DINOv_example/dockerfile
+++ b/DINOv_example/dockerfile
@@ -1,49 +1,54 @@
-FROM pytorch/pytorch:1.13.1-cuda11.6-cudnn8-runtime
+FROM pytorch/pytorch:1.13.0-cuda11.6-cudnn8-devel
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    git \
-    curl \
-    vim \
+ENV CUDA_HOME=/usr/local/cuda
+ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
+ENV PATH=${CUDA_HOME}/bin:${PATH}
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends \
     wget \
+    curl \
+    build-essential \
+    ninja-build \
+    git \
     gcc-8 \
     g++-8 \
-    ninja-build \
-    build-essential \
-    python3-dev \
-    python3-setuptools \
     libgl1-mesa-glx \
     libglib2.0-0 \
-    && rm -rf /var/lib/apt/lists/*
+    libglib2.0-dev \
+    vim && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ENV CC=gcc-8
 ENV CXX=g++-8
 
-# GitHubから特定のバージョン（例: タグ v2.0.4）をインストール
+RUN git clone https://github.com/fundamentalvision/Deformable-DETR.git /workspace/Deformable-DETR
+
 RUN pip3 install 'git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI'
 
-# Detectron2のカスタムバージョンをインストール
 RUN git clone https://github.com/MaureenZOU/detectron2-xyz.git /workspace/detectron2-xyz
 WORKDIR /workspace/detectron2-xyz
 RUN python3 -m pip install .
 
-# Panoptic APIをインストール
 RUN git clone https://github.com/cocodataset/panopticapi.git /workspace/panopticapi
 WORKDIR /workspace/panopticapi
 RUN pip3 install .
 
-# DINOvのリポジトリをクローン
 RUN git clone https://github.com/UX-Decoder/DINOv /workspace/DINOv
 WORKDIR /workspace/DINOv
+
+COPY build_msda.sh /workspace/DINOv/
 
 # モデルチェックポイント（model_swinT.pth）をダウンロード
 RUN wget https://github.com/UX-Decoder/DINOv/releases/download/checkpoint/model_swinT.pth -P /workspace/DINOv
 RUN wget https://github.com/UX-Decoder/DINOv/releases/download/checkpoint/model_swinL.pth -P /workspace/DINOv
 
-# requirements.txtからpycocotoolsを除いた残りの依存関係をインストール
 RUN sed -i '/pycocotools/d' requirements.txt
 RUN sed -i '/torch/d' requirements.txt
 RUN sed -i '/torchvision/d' requirements.txt
-
-RUN pip3 install -r requirements.txt
-RUN pip3 install markupsafe==2.0.1
+RUN pip install --upgrade pip
+RUN python -m pip install -r requirements.txt
+RUN python -m pip install markupsafe==2.0.1
 
