--- a/DINOv_example/dockerfile
+++ b/DINOv_example/dockerfile
@@ -1,9 +1,5 @@
 FROM pytorch/pytorch:1.13.0-cuda11.6-cudnn8-devel
 
-ENV CUDA_HOME=/usr/local/cuda
-ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
-ENV PATH=${CUDA_HOME}/bin:${PATH}
-
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y --no-install-recommends \
@@ -24,6 +20,10 @@ RUN apt-get update && \
 ENV CC=gcc-8
 ENV CXX=g++-8
 
+WORKDIR /workspace
+COPY build_msda.sh /workspace/
+RUN chmod +x build_msda.sh
+
 RUN git clone https://github.com/fundamentalvision/Deformable-DETR.git /workspace/Deformable-DETR
 
 RUN pip3 install 'git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI'
@@ -39,7 +39,7 @@ RUN pip3 install .
 RUN git clone https://github.com/UX-Decoder/DINOv /workspace/DINOv
 WORKDIR /workspace/DINOv
 
-COPY build_msda.sh /workspace/DINOv/
+COPY my_demo.py /workspace/DINOv/
 
 # モデルチェックポイント（model_swinT.pth）をダウンロード
 RUN wget https://github.com/UX-Decoder/DINOv/releases/download/checkpoint/model_swinT.pth -P /workspace/DINOv
